# frozendict

./: README.md  pyproject.toml
.github/workflows/: run-cibuildwheel.yml
