[project]
name = "freezabledict2"
dynamic = ["version"]
description = "freezable dictionary like object inspired by frozenlist."
readme = "README.md"
authors = [
    { name = "Vizonex", email = "VizonexBusiness@gmail.com" }
]

requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools", "cython", "wheel"]

[tool.setuptools.dynamic]
version = {attr = "freezabledict.__version__"}


[tool.setuptools]
zip-safe = false
# Important tip: use packages arguments they help with not needing a src directory...
packages = ['freezabledict']

ext-modules = [
{name = "freezabledict._frozendict", sources = ["freezabledict/_frozendict.pyx"]}
]

[project.urls]
    repository = "https://github.com/Vizonex/freezabledict.git"
